# hems

./: .gitignore  .vercelignore  electron-builder.json  package-lock.json  package.json  pnpm-lock.yaml  vercel.json  vite.config.ts
.github/workflows/: ci.yml  deploy-azure-functions.yml  deploy-infra.yml  electron-release.yml
.kiro/hooks/: backend-frontend-sync.kiro.hook  code-quality-review.kiro.hook  sync-docs-on-change.kiro.hook  vercel-build-check.kiro.hook  verify-site-display.kiro.hook
.kiro/specs/azure-platform-migration/: .config.kiro  HEMS OPS.code-workspace  design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
api/: host.json  package-lock.json  package.json  tsconfig.json
api/src/functions/: achievements.ts  active-missions.ts  community-posts.ts  config.ts  dispatch-agent.ts  downloads.ts  generate-tts-audio.ts  global-dispatch-logs.ts  helicopters.ts  hems-bases.ts  hospital-scenery.ts  hospitals.ts  incident-reports.ts  live-pilots.ts  logs.ts  mission-details.ts  mission-logs.ts  missions.ts  negotiate.test.ts  negotiate.ts  notams.ts  profiles.ts  tactical-analyst.ts  telemetry.ts  user-roles.ts
api/src/lib/: cosmos.ts  db.ts  signalr.ts
api/src/middleware/: auth.ts  requireAdmin.ts
electron/: main.ts
infra/: README.md  main.bicep
infra/modules/: api-management.bicep  app-insights.bicep  cdn.bicep  cosmos-db.bicep  function-app.bicep  key-vault.bicep  openai.bicep  signalr.bicep  speech.bicep  sql-database.bicep  storage.bicep
infra/parameters/: production.bicepparam  staging.bicepparam
infra/scripts/: cleanup-supabase.sh  cutover-runbook.sh  migrate-data.test.ts  migrate-data.ts  migrate-storage.test.ts  migrate-storage.ts
infra/sql/: 001_create_tables.sql
plugins/msfs/: CMakeLists.txt  README.md  hems_bridge.ini  layout.json  manifest.json
plugins/msfs/src/: hems_simconnect.cpp
plugins/xplane-native/: CMakeLists.txt  README.md  hems_bridge.ini
plugins/xplane-native/src/: hems_plugin.cpp
public/downloads/hems-dispatch/: package-lock.json  package.json  server.js
public/downloads/hems-dispatch/bridge/: server.ts
public/downloads/hems-dispatch/web/: package.json
src/: vite-env.d.ts
src/components/: AuthGuard.tsx  BridgeChat.tsx  ConnectionStatusBanner.tsx  DispatcherChat.tsx  Layout.tsx
src/hooks/: useAchievements.ts  useAllContent.ts  useCommunityPosts.ts  useConfig.ts  useContent.ts  useContentManagement.ts  useDownloads.ts  useHelicopterManagement.ts  useHemsData.ts  useHospitalManagement.ts  useIncidentReports.ts  useLivePilots.ts  useMissionLogs.ts  useMissions.ts  useNotams.ts  useProfiles.ts  useUserRole.ts
src/integrations/azure/: AuthProvider.tsx  client.ts  config.ts  migrateHook.test.ts  migrateHook.ts  queryBuilder.test.ts  queryBuilder.ts  realtime.test.ts  realtime.ts
src/integrations/dispatch/: api.ts
src/integrations/simulator/: api.ts
src/integrations/supabase/: logger.ts
src/pages/: Index.tsx  Login.tsx
